feat: updated build to jdk 11 (#355)
* feat: updated build to jdk 11
---------

Co-authored-by: akafredperry <fred@atsign.com>