@@ -1,11 +1,9 @@
 package org.atsign.client.util;
 
-// enables removal of commons-lang
-// TODO: review after JDK upgrade
 public class StringUtil {
 
   public static boolean isBlank(String s) {
-    return s == null || s.trim().isEmpty();
+    return s == null || s.isBlank();
   }
 
   public static boolean isNumeric(String s) {
